syntax = "proto3";

package utils.v1;

import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/panyam/protoc-gen-go-wasmjs/examples/browser-callbacks/gen/go/utils/v1;utilsv1";

message HelperUtilType {
  // Just a test me
  int32 value1 = 1;

  google.protobuf.FieldMask update_mask = 2;

  google.protobuf.Timestamp created_at = 3;
}
